# emoai

./: .env.example  .gitignore  .replit  README.md  REPLIT_DEPLOY.md  activate_premium.py  app.py  check_blocked_users.py  check_bot_messages_today.py  check_db_structure.py  check_premium.py  check_recent_messages.py  check_scheduler_status.py  check_today_users.py  check_users.py  config.py  debug_scheduler.py  delete_test_accounts.py  export_chat_history.py  export_to_excel.py  migrate_remove_stars.py  payment_manager.py  pyproject.toml  requirements.txt  send_manual_reminders.py  show_chat_history.py
handlers/: preferences.py
integrations/: telegram.py
prompts/: empathic_prompt.txt  factual_prompt.txt  system_prompt.txt
services/: content_filter.py  dynamic_response.py  emotional_context.py  gpt_service.py  intents.py  journal.py  microsteps.py  scheduler.py
storage/: db.py
